--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "monkey-script",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "https://github.com/0x-jerry/monkey-script.git",
   "author": "Jerry Wang <x.jerry.wang@gmail.com>",
   "license": "MIT",
+  "packageManager": "yarn@3.0.1-rc.1",
   "scripts": {
-    "dev": "node build.js -w",
-    "build": "node build.js"
+    "dev": "vite build -m dev",
+    "build": "vite build"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/lodash": "^4",
     "@types/node": "^16.4.13",
-    "cac": "^6.7.3",
-    "esbuild": "^0.12.19"
+    "vite": "^2.4.4"
   }
 }
