--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true
+    "module": "esnext",
+    "esModuleInterop": true,
+    "downlevelIteration": true
   },
   "include": ["src"]
 }
