--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,5 @@ plugins:
 yarnPath: .yarn/releases/yarn-3.0.1-rc.1.cjs
 
 nodeLinker: node-modules
+
+npmRegistryServer: https://registry.npm.taobao.org
