--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "build": "vite build"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "vue": "^3.0.5"
   },
   "devDependencies": {
     "@types/lodash": "^4",
     "@types/node": "^16.4.13",
-    "vite": "^2.4.4"
+    "@vitejs/plugin-vue": "^1.2.5",
+    "@vue/compiler-sfc": "^3.0.5",
+    "typescript": "^4.3.2",
+    "vite": "^2.4.4",
+    "vue-tsc": "^0.0.24"
   }
 }
