--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@iconify/json": "^1.1.384",
     "@types/lodash": "^4",
     "@types/node": "^16.4.13",
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
+    "vite-plugin-components": "^0.13.2",
+    "vite-plugin-icons": "^0.6.5",
     "vue-tsc": "^0.0.24"
   }
 }
