--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@0x-jerry/lib": "^0.2.0",
+    "@0x-jerry/lib": "^0.2.5",
     "lodash": "^4.17.21",
     "vue": "^3.0.5"
   },
@@ -20,6 +20,7 @@
     "@types/node": "^16.4.13",
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
+    "less": "^4.1.1",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
     "vite-plugin-components": "^0.13.2",
