--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@types/clone": "^2",
     "@types/lodash": "^4",
     "@types/node": "^16.4.13",
+    "@types/semver": "^7",
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
     "less": "^4.1.1",
+    "semver": "^7.3.5",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
     "vite-plugin-components": "^0.13.2",
