--- a/package.json
+++ b/package.json
@@ -4,32 +4,31 @@
   "repository": "https://github.com/0x-jerry/monkey-script.git",
   "author": "Jerry Wang <x.jerry.wang@gmail.com>",
   "license": "MIT",
-  "packageManager": "yarn@3.0.1-rc.1",
   "scripts": {
     "dev": "vite build -m dev",
     "build": "vite build",
     "release": "sh scripts/release.sh"
   },
   "dependencies": {
-    "@0x-jerry/lib": "^0.2.5",
+    "@0x-jerry/lib": "^0.2.7",
     "clone": "^2.1.2",
     "lodash": "^4.17.21",
-    "vue": "^3.0.5"
+    "vue": "^3.2.29"
   },
   "devDependencies": {
-    "@iconify/json": "^1.1.384",
-    "@types/clone": "^2",
-    "@types/lodash": "^4",
-    "@types/node": "^16.4.13",
-    "@types/semver": "^7",
-    "@vitejs/plugin-vue": "^1.2.5",
-    "@vue/compiler-sfc": "^3.0.5",
-    "less": "^4.1.1",
+    "@iconify/json": "^1.1.461",
+    "@types/clone": "^2.1.1",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^16.11.21",
+    "@types/semver": "^7.3.9",
+    "@vitejs/plugin-vue": "^1.10.2",
+    "@vue/compiler-sfc": "^3.2.29",
+    "less": "^4.1.2",
     "semver": "^7.3.5",
-    "typescript": "^4.3.2",
-    "vite": "^2.4.4",
-    "vite-plugin-components": "^0.13.2",
-    "vite-plugin-icons": "^0.6.5",
+    "typescript": "^4.5.5",
+    "unplugin-icons": "^0.13.0",
+    "unplugin-vue-components": "^0.17.15",
+    "vite": "^2.7.13",
     "vue-tsc": "^0.0.24"
   }
 }
