--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["adpyke.vscode-userscript", "johnsoncodehk.volar"]
+  "recommendations": ["adpyke.vscode-userscript", "vue.volar"]
 }
