--- a/package.json
+++ b/package.json
@@ -10,25 +10,24 @@
     "release": "sh scripts/release.sh"
   },
   "dependencies": {
-    "@0x-jerry/lib": "^0.2.7",
+    "@0x-jerry/utils": "^1.8.0",
     "clone": "^2.1.2",
     "lodash": "^4.17.21",
-    "vue": "^3.2.29"
+    "vue": "^3.2.35"
   },
   "devDependencies": {
-    "@iconify/json": "^1.1.461",
+    "@iconify/json": "^2.1.47",
     "@types/clone": "^2.1.1",
-    "@types/lodash": "^4.14.178",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^16.11.21",
     "@types/semver": "^7.3.9",
-    "@vitejs/plugin-vue": "^1.10.2",
-    "@vue/compiler-sfc": "^3.2.29",
+    "@vitejs/plugin-vue": "^2.3.3",
     "less": "^4.1.2",
     "semver": "^7.3.5",
-    "typescript": "^4.5.5",
-    "unplugin-icons": "^0.13.0",
-    "unplugin-vue-components": "^0.17.15",
-    "vite": "^2.7.13",
-    "vue-tsc": "^0.0.24"
+    "typescript": "^4.6.4",
+    "unplugin-icons": "^0.14.3",
+    "unplugin-vue-components": "^0.19.5",
+    "vite": "^2.9.9",
+    "vue-tsc": "^0.34.15"
   }
 }
