--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
+    "types": [
+      "unplugin-icons/types/vue3"
+    ]
   },
-  "include": ["src"]
+  "include": ["src", "*.d.ts"]
 }
