--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "monkey-script",
-  "version": "0.2.17",
+  "version": "0.2.18",
   "repository": "https://github.com/0x-jerry/monkey-script.git",
   "author": "Jerry Wang <x.jerry.wang@gmail.com>",
   "license": "MIT",
@@ -10,25 +10,24 @@
     "release": "x-release"
   },
   "dependencies": {
-    "@0x-jerry/utils": "^1.8.0",
+    "@0x-jerry/utils": "^1.13.0",
+    "@0x-jerry/vue-kit": "^1.7.0",
+    "@vueuse/core": "^9.13.0",
     "clone": "^2.1.2",
-    "lodash": "^4.17.21",
-    "vue": "^3.2.35"
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "@0x-jerry/x-release": "^0.3.6",
-    "@iconify/json": "^2.1.47",
+    "@iconify/json": "^2.2.24",
     "@types/clone": "^2.1.1",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^16.11.21",
-    "@types/semver": "^7.3.9",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "less": "^4.1.2",
-    "semver": "^7.3.5",
-    "typescript": "^4.6.4",
-    "unplugin-icons": "^0.14.3",
-    "unplugin-vue-components": "^0.19.5",
-    "vite": "^2.9.9",
-    "vue-tsc": "^0.34.15"
+    "@types/node": "^18.14.0",
+    "@types/semver": "^7.3.13",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "less": "^4.1.3",
+    "semver": "^7.3.8",
+    "typescript": "^4.9.5",
+    "unplugin-icons": "^0.15.3",
+    "unplugin-vue-components": "^0.24.0",
+    "vite": "^4.1.3"
   }
 }
